@@ -1,12 +1,15 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.224 2006/04/08 19:43:59 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.225 2006/05/04 04:07:46 agaffney Exp $
 
   8 Apr 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/fe/gtk/RunInstall.py, src/fe/gtk/URIBrowser.py:
   remove extra print statements
 
 *GLI-gtkfe-0.3 (11 Feb 2006)
+
+  2 May 2006; Andrew Gaffney <agaffney@gentoo.org>
+  added splashscreen
 
   10 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
   check for partitions of 'unknown' type and warn user
